--- a/htdocs-source/install.txt
+++ b/htdocs-source/install.txt
@@ -1,4 +1,4 @@
-How to get singing
+How to get performing
 
 :~preface:Installing Performous is very easy using the prebuilt packages. Just click the package and have it installed.
 
@@ -6,8 +6,7 @@ Song downloads can be found on the separate <strong>songs page</strong>.
 
 :h2:Linux binaries
 
-	Ubuntu 9.10 Karmic Koala (alpha): <strong>performous</strong> in official repositories
-	Ubuntu 9.04 Jaunty Jackalope: <a href="http://sourceforge.net/projects/performous/files/performous/Performous-0.3.2-Ubuntu9.04-i386.deb">i386</a> <a href="http://sourceforge.net/projects/performous/files/performous/Performous-0.3.2-Ubuntu9.04-amd64.deb">amd64</a>
+	Ubuntu 9.10 Karmic Koala: <a href="https://sourceforge.net/projects/performous/files/performous/0.4.0/Performous-0.4.0-Ubuntu9.10-i386.deb/download">i386</a> <a href="https://sourceforge.net/projects/performous/files/performous/0.4.0/Performous-0.4.0-Ubuntu9.10-amd64.deb/download">amd64</a>
 	Ubuntu 8.04 LTS Hardy Heron: <a href="http://sourceforge.net/projects/performous/files/performous/Performous-0.3.2-Ubuntu8.04-i386.deb">i386</a> <a href="http://sourceforge.net/projects/performous/files/performous/Performous-0.3.2-Ubuntu8.04-amd64.deb">amd64</a>
 	Debian: <strong>performous</strong> in official repositories
 	OpenSUSE: <a href="http://packman.links2linux.de/package/Performous/">packages</a>
@@ -17,7 +16,7 @@ If you get an error about unsatisfied dependencies on Ubuntu, you may have to en
 
 :h2:Windows
 
-None yet, but it compiles on Microsoft Visual Studio and we'll probably get some binaries soon enough.
+Building software on Windows has turned out to be extremely difficult but we are still actively working on this!
 
 :h2:Mac OS X 
 
@@ -25,7 +24,7 @@ No software bundle currently available, but we expect one of the Mac users to pa
 
 :h2:Other systems and development version
 
-	Source code: <a href="http://sourceforge.net/projects/performous/files/performous/Performous-0.3.2-Source.tar.bz2">universal</a>
+	Source code: <a href="https://sourceforge.net/projects/performous/files/performous/0.4.0/Performous-0.4.0-Source.tar.bz2/download">universal</a>
 
 	The very latest source code is available in our Git repository. See the <strong>hacking</strong> page for more information.
 
