--- a/htdocs-source/history.txt
+++ b/htdocs-source/history.txt
@@ -30,20 +30,20 @@ This is a bugfix release that brings no new features. This is likely to be the l
 
 :h2:2009-07-14 - Status update
 
-We are currently preparing a bugfix release 0.3.2 that will bring no new features but that fixes various issues of 0.3.1. In order to do this properly, please let us know if there were any issues in 0.3.1 that you'd like to have fixed. Additionally, it would be nice if you also helped testing the git branch 0.3, aiming for this release. Use command <strong>git branch 0.3 origin/0.3 && git checkout 0.3</strong> in your cloned repository to switch to the 0.3 branch (<strong>git checkout master</strong> will switch back to the master branch).
+We are currently preparing a bugfix release 0.3.2 that will bring no new features but that fixes various issues of 0.3.1. In order to do this properly, please let us know if there were any issues in 0.3.1 that you'd like to have fixed. Additionally, it would be nice if you also helped testing the git branch 0.3, aiming for this release. Use command <strong>git branch 0.3 origin/0.3 &amp;&amp; git checkout 0.3</strong> in your cloned repository to switch to the 0.3 branch (<strong>git checkout master</strong> will switch back to the master branch).
 
 On the master branch we have implemented preliminary support for the <a href="http://fretsonfire.sourceforge.net/">Frets on Fire</a> / <a href="http://code.google.com/p/fofix/">FoFiX</a> song format. Performous can currently extract the notes from the songs and if the song has lyrics (e.g. Rock Band rips), you can sing it the Performous way. We have 3d rendering of guitar neck working, but gameplay is still missing. Further, there is a simple C++ clone of Frets on Fire, called Silky Strings, in our repository and build system. Building it is not enabled by default, so you will have to use ccmake to enable it. This game is used as the basis for our implementation.
 
 Finally, a little request. Do you like Performous? You can register as a Performous user on our Ohloh page and add a pin to the map as we'd love to see where Performous is being used! For more information, see <a href="http://www.ohloh.net/projects/performous">http://www.ohloh.net/projects/performous</a>.
 
 :h2:2009-07-06 - Performous 0.3.1 released
-<img src="imgs/songs-small.jpg" style="float: right; margin-left: 3mm;">
+<img src="imgs/songs-small.jpg" style="float: right; margin-left: 3mm;" alt=""/>
 
 Eight months after the 0.3.0 release, the Performous team is proud to announce the release of the 0.3.1 version. Whereas it is only a minor revision number, it updates lots of things (over 350 commits).
 
 Special thanks go to all contributors (Tronic, Yoda, knittl, zarn, Jack_MD ...).
 
-<br style="clear: right;">New features:
+<br style="clear: right;"/>New features:
 	Up to four player multiplayer game with many mics from many sound cards
 	Totally new XML-based configuration system
 	Reworked song list exporter (based on XML+XSLT)
@@ -76,7 +76,7 @@ As a sidenote, we are still looking for new team members with skills in C++, vec
 The Debian packages have been recreated because the original ones (ultrastar-songs-2 and ultrastar-songs-restricted-2) had major issues. Please upgrade to the new versions if you installed the old versions from our website. Apologies for the inconvinience.
 
 :h2:2008-11-03 - Performous 0.3.0 released
-<img src="imgs/bday.png" alt="A cake" style="float: right">Oh yes, it is exactly one year since the 0.2.0 release and we are releasing again. But speaking on anniversaries, the project founder <strong>Vincent Le Ligeour</strong> aka <strong>Yoda</strong> turns 29 years today, too :).
+<img src="imgs/bday.png" alt="A cake" style="float: right"/>Oh yes, it is exactly one year since the 0.2.0 release and we are releasing again. But speaking on anniversaries, the project founder <strong>Vincent Le Ligeour</strong> aka <strong>Yoda</strong> turns 29 years today, too :).
 
 Just to give some idea of how hard we have worked since the last release, there have been over seven hundred SVN commits since 0.2.1, which is more than in all earlier versions combined (490 commits).
 
