--- a/htdocs-source/history.txt
+++ b/htdocs-source/history.txt
@@ -1,5 +1,47 @@
 Archived news
 
+:h2:2009-12-12 - 0.4.1 cancelled, Windows alpha available
+We have rather large new features in the development version and because of this the next release will be 0.5.0 rather than 0.4.1. The hilights include a new menu and of course the dance game feature, which we just tested in two player mode with actual dance pads. No release date other than "soon" has been set.
+
+Windows alpha build from a few days ago is available <a href="http://fast.performous.org/setup.exe">here</a>. A release is coming later, once we manage to remove the rough edges, hopefully with the 0.5.0 Linux release. The OS X bundling effort has ceased for now and we really need more Mac developers to get the job done. Compiling the software is easy, but bundling has proven to be difficult.
+
+:h2:2009-12-05 - The Slashd-- LifeHacker Effect
+<img src="imgs/lifehacker-effect.png" style="float: right; border: 0;" alt=""/>
+I was wondering why my network connection was lagging while playing <a href="http://springrts.com/">TA Spring</a> (a great open-source RTS game which you should also check out). The site stats revealed that <a href="http://lifehacker.com/5419099/performous-is-like-rock-band-for-your-linux-pc">LifeHacker</a> had linked to us and even though I had never heard of that site before, it is apparently very popular, as seen in the statistic where you can see a huge peak even though the day isn't even over yet (picture taken at 15:00). :)
+
+Someone also made a <a href="http://www.youtube.com/watch?v=nmSTnbBZoqI">Youtube video</a> of Performous 0.3.2 today. Unfortunately he doesn't have microphone connected to the game, apparently, so you can't see the pitch display and scoring parts at all :(
+
+<a href="screenshots/Performous-0.4.0-Windows.jpg"><img src="imgs/windows.jpg" style="float: left; margin-right: 2mm;" alt=""/></a>
+In other news, we have working <strong>Windows binaries</strong> (thanks to the hard work by Xaldyz) and it seems that we will be able to release these with the upcoming 0.4.1 release, even though some cleanup and an installer are required.
+
+The OSX bundle doesn't look so good as apparently there are problems with bundling some of the libraries used. Compiling on MacPorts yourself is easy, so please consider that if you are a Mac user (there are instructions on the Hacking page).
+
+:h2:2009-11-28 - Performous 0.4.0 released
+<img src="imgs/guitar_sing-small.jpg" alt=""/><img src="imgs/band-small.jpg" style="margin-left: 1mm" alt=""/>
+A major new release that not only contains improvements to the singing game you all love but more importantly extends the game into a full-fledged band game. Since the pre-release at <a href="http://assembly.org/">Assembly Summer 2009</a> demo party, a large amount of improvements have been done, improving both the gameplay and the graphics. It is not perfect yet, but this certainly is a good time to make a release. Changes since 0.3.2 include:
+	Guitar, bass and drums
+		Uses songs in <a href="http://fretsonfire.sourceforge.net/">Frets on Fire</a> / <a href="http://code.google.com/p/fofix/">FoFiX</a> format
+		All tracks (including vocals) are supported
+		Autodetection of any connected Guitar Hero and Rock Band instruments
+		Support for using a keyboard as guitar controller (FoF style)
+		Better hammer-on/pull-off support than in other games
+		Engine tries to figure out player's intention instead of picking the nearest chord
+		Multiplayer for as many players as you have instruments for
+		Full 3D note visualization
+	Initial hiscore support (press End in song browser)
+	Textual feedback for singers after each line
+	Guessing background/cover images and videos by filenames (if not specified in song files)
+	SVG graphics and fail samples from Frets on Fire (GPL for the win!)
+	Major changes in the internals, including a completely new audio mixer
+	Configuration system improvements, now properly supports system and user conf
+	Always use desktop resolution for full screen mode (instead of mode switching)
+	Many minor bugs fixed
+	Build/install changes and cleanup
+		Installs only minimal amount of cruft
+		Increased version requirements for Boost, CMake, etc.
+		Various small bugs fixed
+Special thanks to all the new developers who participated in this release (see a list of contributors and their activity at <a href="http://www.ohloh.net/projects/performous">Ohloh.net</a>). Without you it would not be possible to develop the game at a rate greater than ever before :)
+
 :h2:2009-11-16 - Testers needed
 Since the last status update we have had active development and currently the codebase is starting to look suitable for a release. Since waiting more will not make things better, we have set the release date as the next weekend. Please help us test the development version (git master) and let us know if there are any problems, especially if there are any regressions from 0.3.2. The instrument feature is not very pretty, but the playability of it already seems better than that of Frets on Fire. There are a few known issues with the FoF format song parser when dealing with vocal tracks. It is likely that these will not get fixed in time for 0.4.0.
 
